--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /unit_tests/jest_multiple_tests/node_modules
 /integration_tests/knex/node_modules
 /end_to_end_tests/node_modules
+/organising_test_suit/node_modules
